src/css/_composition.css
/* Composition */

/* https://cube.fyi/composition.html
Composition rules are for defining layouts, interactions, and flow/rhythm.
Composition rules are not for aesthetic elements such as fonts, colors, borders, shadows, etc.
*/

/* "Avoid margins on components and padding on containers" */

header,
main,
footer {
	margin-inline: var(--space-3xs-3xl);	
}

/* This keeps the header to no more than the content width */
header:has(h1){
	display: inline-block;
}

.flow > * + * {
	margin-block-start: var(--flow-space, 1.5em);
}

header {
	--flow-space: var(--base-spacing-container-masthead);
}

main {
	--flow-space: var(--base-spacing-container-feature);
}

section > *:not(h2, h3) {
	padding-inline: var(--base-spacing-component-lede);
}

aside ul[role="list"],
footer ul[role="list"] {
	margin-block-start: var(--space-3xs);
	display: grid;
	grid-template-columns: 1fr 1fr;
}

aside ul[role="list"] li {
	padding-block: var(--space-3xs);
}

aside p:first-of-type {
	margin-block-start: var(--space-xs);
}

footer {
	margin-block: var(--space-s-m);
}

/*
.cover {
	display: flex;
	flex-direction: column;
	min-block-size: 100vh;
	padding: 0;
}

.center {
	box-sizing: content-box;
	margin-inline: auto;
	max-inline-size: var(--measure, 60ch);
}

.switcher {
	display: flex;
	flex-wrap: wrap;
	gap: var(--space-s);
}

.switcher > * {
	flex-grow: 1;
	flex-basis: calc((20rem - 100%) * 999);
}

.switcher > :nth-last-child(n + 4),
.switcher > :nth-last-child(n + 4) ~ * {
	flex-basis: 100%;
}

.cluster {
	display: flex;
	flex-wrap: wrap;
	gap: var(--space, 1ch);
	justify-content: flex-start;
	align-items: center;
} */

